# Q1_25_Builder_daniel-burlacu

./: .gitignore  Anchor.toml  README.md  c
airdrop/: airdrop.ts  dev-wallet.json  enroll.ts  keygen.ts  package-lock.json  package.json  transfer.ts
airdrop/programs/: Turbin3_prereq.ts  test.ts
capstone/rs/src/programs/amm/programs/amm/: Cargo.toml
capstone/rs/src/programs/amm/programs/amm/src/: constants.rs  errors.rs  lib.rs
capstone/rs/src/programs/amm/programs/amm/src/instructions/: deposit.rs  initialize.rs  swap.rs  withdraw.rs
capstone/rs/src/programs/amm/programs/amm/src/state/: config.rs  mod.rs
capstone/rs/src/programs/nft-staking/programs/nft-staking/: Cargo.toml
capstone/rs/src/programs/nft-staking/programs/nft-staking/src/: lib.rs
capstone/rs/src/programs/nft-staking/programs/nft-staking/src/instructions/: claim.rs  initialize_config.rs  initialize_users.rs  stake.rs
capstone/rs/src/programs/nft-staking/programs/nft-staking/src/state/: user.rs
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/animal/: Cargo.toml
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/animal/src/: errors.rs  lib.rs
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/animal/src/contexts/: behaviour_record.rs  check_vet_auth.rs  initialize.rs  medical_record.rs  mod.rs  owner.rs  req_auth.rs  update_animal.rs  vet_auth.rs
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/animal/src/entities/: behaviour_record.rs  medical_record.rs  mod.rs  owner.rs  vet_auth.rs  vet_request.rs
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/animal/src/instructions/: behaviour_record.rs  check_vet_auth.rs  initialize.rs  medical_record.rs  mod.rs  owner.rs  req_auth.rs  update_animal.rs  vet_auth.rs
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/veterinary/: Cargo.toml
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/veterinary/src/: lib.rs
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/veterinary/src/contexts/: animal.rs  initialize.rs  mod.rs  owner.rs
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/veterinary/src/entities/: animal.rs  mod.rs  veterinary.rs
capstone/rs/src/programs/solana-ark-foundation-pilot/programs/veterinary/src/instructions/: animal.rs  initialize.rs  mod.rs  owner.rs
capstone/rs/src/programs/solana-ark-foundation/programs/solana-ark-foundation/: Cargo.toml
capstone/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-3800-8oZgyTyT6Gk27T8A469soWafKhaLvtgDn1yFvgszBSkE.tar.zst  snapshot-3900-BuWXZxsGC6iAo9UcygXpvK1xPYxgJBNTBoyHHtPoXeaG.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
capstone/test-ledger/accounts/run/: 0.1  100.0  1000.11  1006.13  109.3  1100.12  1200.15  1249.18  1300.17  1317.24  1400.23  1500.25  1600.26  1700.27  1800.28  1900.29  200.2  2000.30  2100.31  2200.32  2280.34  2300.33  2400.35  2424.40  2500.39  2575.42  2600.41  2700.44  2800.45  2900.46  300.4  3000.47  3100.48  3200.49  3300.50  3400.51  3500.52  3600.53  3700.55  3903.60  (+6 more)
capstone/test-ledger/snapshot/3900/: 3900  status_cache
capstone/ts/: package.json  tsconfig.json
capstone/ts/cluster1/: nft_collection_mint.ts  nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.js  spl_metadata.ts  spl_metadata_json.ts  spl_mint.ts  spl_transfer.ts
capstone/ts/cluster1/token_json/: token_saft.json
programs/nft-staking/src/: constatns.rs  errors.rs
programs/nft-staking/src/instructions/: unstake.rs
programs/nft-staking/src/state/: config.rs  mod.rs  (+1 more)
rust_prereq/: Cargo.toml
rust_prereq/src/: lib.rs
rust_prereq/src/programs/: Turbin3_prereq.rs  mod.rs
(+29 files in other folders)
