[package]
name= "solana_ark_foundation_veterinary"
version = "0.1.0"
description = "This is Solana Ark Foundation Pilot Program version 0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "veterinary"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
chrono = "0.4"

[patch.crates-io]
curve25519-dalek = { version = "3.2.1" }
zeroize = { version = "1.8.1" }
